coin feature temp 1

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'jp.kuluna:calendarviewpager:1.3.0'
     implementation 'com.android.support:design:27.1.1'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.1.+'
 
     //di
     implementation 'com.google.dagger:dagger:2.11'
