--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,10 @@ android {
         multiDexEnabled true
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+                arguments = [
+                        "room.schemaLocation":"$projectDir/schemas".toString(),
+                        //"room.incremental":"true",
+                        "room.expandProjection":"true"]
             }
         }
     }
@@ -71,6 +74,12 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.1.+'
     implementation('com.journeyapps:zxing-android-embedded:3.4.0')
+
+    //room
+    def room_version = "1.1.1"
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    implementation "android.arch.persistence.room:rxjava2:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
 
     //di
     implementation 'com.google.dagger:dagger:2.11'
