--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.10'
+    ext.kotlin_version = '1.3.50'
     repositories {
-        maven { url 'https://jitpack.io' }
         google()
         jcenter()
+        maven { url 'https://www.jitpack.io' }
+        mavenCentral()
+        maven { url "https://maven.google.com" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
@@ -19,9 +21,11 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url 'https://jitpack.io' }
         google()
         jcenter()
+        maven { url 'https://www.jitpack.io' }
+        mavenCentral()
+        maven { url "https://maven.google.com" }
     }
 }
 
