--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,5 +107,6 @@ dependencies {
 
     //multidex
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
 }
 apply plugin: 'com.google.gms.google-services'
