--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.1.+'
     implementation('com.journeyapps:zxing-android-embedded:3.4.0')
+    implementation 'com.google.code.gson:gson:2.8.5'
+
 
     //room
     def room_version = "1.1.1"
