--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,12 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name="com.example.bonus.BonusActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
         <activity android:name=".presentation.view.zxing.ScanActivity"
             android:stateNotNeeded="true"
             android:windowSoftInputMode="stateAlwaysHidden"/>
